...





        <ImageView
            android:id="@+id/startvidcall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/video_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"

            />

        <ImageView
            android:id="@+id/startcall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/call_white"
            app:layout_constraintEnd_toStartOf="@id/startvidcall"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
...
