...
        android:text="10.00 AM"
        app:layout_constraintTop_toBottomOf="@id/availableslots"
        android:background="@drawable/lightgreyround"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/slot2"
        app:layout_constraintBottom_toTopOf="@id/BookApt"/>
    <TextView
        android:id="@+id/slot2"
        android:clickable="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/twofactorverifybutton"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="Book an Appointment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


...
