...
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/yellowroundborder"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="Drop a review 💬"
        app:layout_constraintBottom_toTopOf="@+id/booksession"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leadership" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/twofactorverifybutton"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="Book a Session"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


...
